<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
   android:layout_gravity="center"
    android:orientation="vertical"
android:background="@drawable/widget_bg_normal"
>
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	   android:layout_gravity="center"
	    android:orientation="horizontal">
		
		<TextView android:id="@+id/top_left"
		android:layout_weight="1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/boulder"
		android:layout_marginTop="3dip"
		android:padding="3dip"
		android:textColor="@android:color/black"
		android:layout_gravity="center|left"/>
		
		<TextView android:id="@+id/heading_foothills"
		android:layout_weight="1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/foothills"
		android:layout_marginTop="3dip"
		android:padding="3dip"
		android:textColor="@android:color/black"
		android:layout_gravity="center|center_horizontal"/>
		
		<TextView android:id="@+id/heading_mesa"
		android:layout_weight="1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/mesa"
		android:layout_marginTop="3dip"
		android:padding="3dip"
		android:textColor="@android:color/black"
		android:layout_gravity="center|right"/>
	
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	   android:layout_gravity="center"
	    android:orientation="horizontal">
	
		<TextView android:id="@+id/temp_heading"
		android:layout_weight="1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/temp"
		android:padding="0dip"
		android:textColor="@android:color/black"
		android:layout_gravity="center|left"/>
		
		<TextView android:id="@+id/temp_foothills"
		android:layout_weight="0.5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:text="@string/na"
		android:padding="0dip"
		android:textColor="@android:color/black"
		android:layout_gravity="center|center_horizontal"
		android:textStyle="bold"/>
		
		<TextView android:id="@+id/dewpoint_foothills"
		android:layout_weight="0.5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="12sp"
		android:text="@string/na"
		android:padding="0dip"
		android:textColor="@android:color/black"
		android:layout_gravity="center|center_horizontal"/>
		
		<TextView android:id="@+id/temp_mesa"
		android:layout_weight="0.5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:text="@string/na"
		android:padding="0dip"
		android:textColor="@android:color/black"
		android:layout_gravity="center|center_horizontal"
		android:textStyle="bold"/>
		
		<TextView android:id="@+id/dewpoint_mesa"
		android:layout_weight="0.5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="12sp"
		android:text="@string/na"
		android:padding="0dip"
		android:textColor="@android:color/black"
		android:layout_gravity="center|center_horizontal"/>
		
		</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	   android:layout_gravity="center"
	    android:orientation="horizontal"
	>
	
	<TextView android:id="@+id/h_p_heading"
	android:layout_weight="2"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/H_P"
	android:padding="3dip"
	android:textColor="@android:color/black"
	android:layout_gravity="center|left"/>
	
	<TextView android:id="@+id/humidity_foothills"
	android:layout_weight="0.5"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/na"
	android:padding="3dip"
	android:textColor="@android:color/black"
	android:layout_gravity="center|center_horizontal"
	android:textStyle="bold"/>
	
	<TextView android:id="@+id/pressure_foothills"
	android:layout_weight="0.5"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/na"
	android:padding="3dip"
	android:textColor="@android:color/black"
	android:layout_gravity="center|center_horizontal"
	/>
	
	<TextView android:id="@+id/humidity_mesa"
	android:layout_weight="0.5"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/na"
	android:padding="3dip"
	android:textColor="@android:color/black"
	android:layout_gravity="center|right"
	android:textStyle="bold"/>
	
	
	<TextView android:id="@+id/pressure_mesa"
	android:layout_weight="0.5"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/na"
	android:padding="3dip"
	android:textColor="@android:color/black"
	android:layout_gravity="center|right"/>
	
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	   android:layout_gravity="center"
	    android:orientation="horizontal"
	>
	
	<TextView android:id="@+id/wind_heading"
	android:layout_weight="1"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/wind"
	android:padding="3dip"
	android:textColor="@android:color/black"
	android:layout_gravity="center|left"
	/>
	
	<TextView android:id="@+id/wind_foothills"
	android:layout_weight="1"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/na"
	android:padding="3dip"
	android:textColor="@android:color/black"
	android:layout_gravity="center|center_horizontal"
	android:textStyle="bold"/>
	
	<TextView android:id="@+id/wind_mesa"
	android:layout_weight="1"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/na"
	android:padding="3dip"
	android:textColor="@android:color/black"
	android:layout_gravity="center|right"
	android:textStyle="bold"/>
	
	</LinearLayout>

</LinearLayout>